<resources>
    <string name="app_name">悠行</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="picture">[图片]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="voice">[语音]</string>
    <string name="voice_call">[文本]</string>
    <string name="shake">震动</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Introduction">简介</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="mute">静音</string>
    <string name="unable_to_connect">不能连接到服务器</string>
    <string name="agree">同意</string>
    <string name="not_download">未下载:</string>
    <string name="Please_enter_a_username">请输入用户名</string>
    <string name="not_add_myself">不能添加自己</string>
    <string name="This_user_is_already_your_friend">此用户已是你的好友</string>
    <string name="Add_a_friend">加个好友呗</string>
    <string name="send_successful">发送请求成功,等待对方验证</string>
    <string name="Request_add_buddy_failure">请求添加好友失败:</string>
    <string name="Network_error">网络出错</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="expression">[表情]</string>
    <string name="Removed_from_the_failure">移出失败</string>
    <string name="be_removing">正在移出...</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="deleting">正在删除...</string>
    <string name="Delete_failed">删除失败:</string>
    <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
    <string name="Log_uploaded_successfully">日志上传成功</string>
    <string name="Log_Upload_failed">log上传失败</string>
    <string name="get_failed_please_check">获取失败,请检查网络或稍后再试</string>
    <string name="people">人)</string>
    <string name="being_added">正在添加...</string>
    <string name="The_delete_button_is_clicked">删除按钮被点击</string>
    <string name="Add_a_button_was_clicked">添加按钮被点击</string>
    <string name="not_delete_myself">不能删除自己</string>
    <string name="Are_removed">正在移除...</string>
    <string name="Is_sending_a_request">正在发送请求...</string>
    <string name="Request_to_join">请求加入</string>
    <string name="User_name_cannot_be_empty">用户名不能为空！</string>
    <string name="Password_cannot_be_empty">密码不能为空！</string>
    <string name="please_set_the_current">设置当前用户的昵称\n用于ios离线推送时显示用户昵称</string>
    <string name="Is_landing">正在登录...</string>
    <string name="list_is_for">将在后台获取好友和群聊列表...</string>
    <string name="login_failure_failed">登录失败: 获取好友或群聊失败</string>
    <string name="Login_failed">登录失败:</string>
    <string name="receive_the_passthrough">收到透传：action：</string>
    <string name="have_you_removed">已把你从他好友列表里移除</string>
    <string name="can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="the_current_network">当前网络不可用，请检查网络设置</string>
    <string name="Invite_you_to_join_a_group_chat">邀请你加入了群聊</string>
    <string name="Agreed_to_your_group_chat_application">同意了你的群聊申请</string>
    <string name="Logoff_notification">下线通知</string>
    <string name="Remove_the_notification">移除通知</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="Confirm_password_cannot_be_empty">确认密码不能为空!</string>
    <string name="Two_input_password">两次输入的密码不一致，请重新输入!</string>
    <string name="Is_the_registered">正在注册...</string>
    <string name="Registered_successfully">注册成功</string>
    <string name="network_anomalies">网络异常，请检查网络！</string>
    <string name="User_already_exists">用户已存在！</string>
    <string name="registration_failed_without_permission">注册失败，无权限！</string>
    <string name="Registration_failed">注册失败:</string>
    <string name="Are_logged_out">正在退出登录..</string>
    <string name="Download_the_pictures">下载图片: 0%</string>
    <string name="Download_the_pictures_new">下载图片:</string>
    <string name="Failed_to_download_file">下载文件失败:</string>
    <string name="Version_number_is_wrong">版本号错误</string>
    <string name="Are_connected_to_each_other">正在连接对方...</string>
    <string name="Is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="have_connected_with">已经和对方建立连接，等待对方接受...</string>
    <string name="In_the_call">通话中...</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接受！...</string>
    <string name="Connection_failure">连接建立失败！...</string>
    <string name="The_other_party_is_not_online">对方不在线，请稍后再拨...</string>
    <string name="The_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="The_other_is_hang_up">对方已经挂断</string>
    <string name="The_other_party_did_not_answer_new">对方未接听</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="Have_downloaded">已下载</string>
    <string name="Did_not_download">未下载</string>
    <string name="Has_agreed_to_your_friend_request">已同意你的好友请求</string>
    <string name="Request_to_add_you_as_a_friend">请求加你为好友</string>
    <string name="Apply_to_the_group_of">申请加入群：</string>
    <string name="Has_agreed_to">已同意</string>
    <string name="Has_refused_to">已拒绝</string>
    <string name="Are_agree_with">正在同意...</string>
    <string name="direct_call">Direct</string>
    <string name="relay_call">Relay</string>
    <string name="Agree_with_failure">同意失败:</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="Send_the_following_pictures">发送以下图片？</string>
    <string name="search_new">搜</string>
    <string name="Delete_the_contact">删除联系人</string>
    <string name="Move_into_the_blacklist_new">移入到黑名单</string>
    <string name="Change_the_group_name">改变群名称</string>
    <string name="Sync_Groups_From_Server">从服务器下载群聊信息</string>
    <string name="update_contact_list">更新联系人列表</string>
    <string name="update_black_list">更新黑名单</string>
    <string name="update_groups">更新群聊</string>
    <string name="update_contact_list_failed">更新联系人列表失败</string>
    <string name="update_black_list_failed">更新黑名单失败</string>
    <string name="update_groups_failed">更新群聊失败</string>
    <string name="no_more_messages">没有更多的消息了</string>
    <string name="gorup_not_found">找不到这个群组</string>
    <string name="chatroom_allow_owner_leave"> 允许聊天室群主离开</string>
    <string name="group_id">群ID</string>
    <string name="group_nick">聊天室名称:</string>
    <string name="move_out_backlist">移出黑名单</string>
    <string name="input_new_nick_hint">输入新昵称</string>
    <string name="search_pubic_group">搜索公开群</string>
    <string name="group_not_existed">群组不存在</string>
    <string name="group_search_failed">搜索失败</string>
    <string name="error_send_invalid_content">你发送了不合法的消息内容</string>
    <string name="error_send_not_in_the_group">你已经不在此群了</string>
    <string name="refreshing_group_list">正在刷新群列表</string>
    <string name="failed_to_load_data">加载数据失败，请检查网络或稍后重试</string>
    <string name="searching">正在搜索..</string>
    <string name="hanging_up">正在挂断..</string>
    <string name="illegal_user_name">用户名不合法</string>
    <string name="robot_chat">环信小助手</string>
    <string name="title_user_profile">个人资料</string>
    <string name="nickname">昵称</string>
    <string name="dl_title_upload_photo">上传头像</string>
    <string name="dl_msg_local_upload">本地上传</string>
    <string name="dl_ok">确定</string>
    <string name="dl_cancel">取消</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="get_confirm_code">获取验证码</string>
    <string name="please_user_phone">请输入手机号</string>
    <string name="please_user_pwd">请输入密码</string>
    <string name="please_new_user_pwd">请输入新密码</string>
    <string name="please_confirm_code">请输入验证码</string>
    <string name="finish">完成</string>
</resources>